--- a/docs/developer/getting-started/debugging.asciidoc
+++ b/docs/developer/getting-started/debugging.asciidoc
@@ -131,11 +131,11 @@ Once you're finished, you can stop Kibana normally, then stop the {es} and APM s
 ./scripts/compose.py stop
 ----
 
-=== Using Kibana server logs
-Kibana Logs is one of the most important parts of Kibana. It's a great way to see what's going on in your application and debug performance issues. Although navigating through a large number of generated logs can be overwhelming, we will discuss what techniques you can use to optimize the process.
+=== Using {kib} server logs
+{kib} Logs is a great way to see what's going on in your application and to debug performance issues. Navigating through a large number of generated logs can be overwhelming, and following are some techniques that you can use to optimize the process.
 
-Let's start by defining a problem area you are interested in. For example, you might be interested in seeing how a particular Kibana Plugin is performing, so no need to gather logs for all of Kibana. Or you want to focus on a particular feature, such as requests from the Kibana server to the Elasticsearch server.
-Depending on your needs, you can configure Kibana to generate logs for a specific feature.
+Start by defining a problem area that you are interested in. For example, you might be interested in seeing how a particular {kib} Plugin is performing, so no need to gather logs for all of {kib}. Or you might want to focus on a particular feature, such as requests from the {kib} server to the {es} server.
+Depending on your needs, you can configure {kib} to generate logs for a specific feature.
 [source,yml]
 ----
 logging:
@@ -153,7 +153,7 @@ logging.root:
 
 ### or gather a subset of the logs
 logging.loggers:
-  ### responses to an HTTP requests
+  ### responses to an HTTP request
   - name: http.server.response
     level: debug
     appenders: [file]
@@ -166,28 +166,28 @@ logging.loggers:
     level: debug
     appenders: [file]
 ----
-WARNING: Note that we configured Kibana's `file` appender to produce logs in https://www.elastic.co/guide/en/ecs/master/ecs-reference.html[ECS JSON] format. At the moment, it's the only format including meta-information necessary for https://www.elastic.co/guide/en/apm/agent/nodejs/current/log-correlation.html[log correlation] out-of-the-box.
+WARNING: Kibana's `file` appender is configured to produce logs in https://www.elastic.co/guide/en/ecs/master/ecs-reference.html[ECS JSON] format. It's the only format that includes the meta information necessary for https://www.elastic.co/guide/en/apm/agent/nodejs/current/log-correlation.html[log correlation] out-of-the-box.
 
-The next step is to define what https://www.elastic.co/observability[observability tools] are available to you. 
-For a better Developer Experience, we recommend you to set up https://www.elastic.co/guide/en/apm/get-started/current/observability-integrations.html[Observability integration] provided by Elastic to debug your application with the powerful <<debugging-logs-apm-ui, APM UI.>>
-If you need to debug something quickly without the necessity to set up additional tooling, you can deal with <<plain-kibana-logs, the plain Kibana logs yourselves.>>
+The next step is to define what https://www.elastic.co/observability[observability tools] are available. 
+For a better experience, set up an https://www.elastic.co/guide/en/apm/get-started/current/observability-integrations.html[Observability integration] provided by Elastic to debug your application with the <<debugging-logs-apm-ui, APM UI.>>
+To debug something quickly without setting up additional tooling, you can work with <<plain-kibana-logs, the plain {kib} logs.>>
 
 [[debugging-logs-apm-ui]]
 ==== APM UI
-*Prerequisites* Kibana logs are configured to be in [ECS JSON](https://www.elastic.co/guide/en/ecs/master/ecs-reference.html[ECS JSON]) format to include tracing identifiers.
+*Prerequisites* {kib} logs are configured to be in https://www.elastic.co/guide/en/ecs/master/ecs-reference.html[ECS JSON] format to include tracing identifiers.
 
-If you would like to debug Kibana with Kibana APM UI, you need to set up the APM infrastructure. You can find instructions for the setup process
-https://www.elastic.co/guide/en/apm/get-started/current/observability-integrations.html[on this page].
+To debug {kib} with the APM UI, you must set up the APM infrastructure. You can find instructions for the setup process
+https://www.elastic.co/guide/en/apm/get-started/current/observability-integrations.html[on the Observability integrations page].
 
-Once you set up the APM infrastructure, you can enable the APM agent and put Kibana under load to collect APM events. To analyze the collected metrics and logs, use the APM UI as demonstrated https://www.elastic.co/guide/en/kibana/master/transactions.html#transaction-trace-sample[in the docs].
+Once you set up the APM infrastructure, you can enable the APM agent and put {kib} under load to collect APM events. To analyze the collected metrics and logs, use the APM UI as demonstrated https://www.elastic.co/guide/en/kibana/master/transactions.html#transaction-trace-sample[in the docs].
 
 [[plain-kibana-logs]]
-==== Plain Kibana Logs
-*Prerequisites* Kibana logs are configured to be in https://www.elastic.co/guide/en/ecs/master/ecs-reference.html[ECS JSON] format to include tracing identifiers.
+==== Plain {kib} logs
+*Prerequisites* {kib} logs are configured to be in https://www.elastic.co/guide/en/ecs/master/ecs-reference.html[ECS JSON] format to include tracing identifiers.
 
-Open Kibana Logs and search for an operation you are interested in.
-For example, we want to investigate the response times for queries to the `/api/telemetry/v2/clusters/_stats` Kibana endpoint.
-Open the Kibana Logs and search for the HTTP server response for the endpoint. It looks like the following (some fields are omitted for brevity)
+Open {kib} Logs and search for an operation you are interested in.
+For example, suppose you want to investigate the response times for queries to the `/api/telemetry/v2/clusters/_stats` {kib} endpoint.
+Open Kibana Logs and search for the HTTP server response for the endpoint. It looks similar to the following (some fields are omitted for brevity).
 [source,json]
 ----
 {
@@ -197,4 +197,4 @@ Open the Kibana Logs and search for the HTTP server response for the endpoint. I
   "transaction":{"id":"d0c5bbf14f5febca"}
 }
 ----
-We are interested in https://www.elastic.co/guide/en/ecs/current/ecs-tracing.html#field-trace-id[trace.id] field that is a unique identifier of a trace. The `trace.id` gives us a way to group multiple events, like transactions, that belong together. In this case we search for `"trace":{"id":"9b99131a6f66587971ef085ef97dfd07"}` to get all the logs belonging to the same trace. So you can see how many Elasticsearch requests have been triggered during the `9b99131a6f66587971ef085ef97dfd07` trace, what they looked like, what elasticsearch endpoints were hit, etc.
+You are interested in the https://www.elastic.co/guide/en/ecs/current/ecs-tracing.html#field-trace-id[trace.id] field, which is a unique identifier of a trace. The `trace.id` provides a way to group multiple events, like transactions, which belong together. You can search for `"trace":{"id":"9b99131a6f66587971ef085ef97dfd07"}` to get all the logs that belong to the same trace. This enables you to see how many {es} requests were triggered during the `9b99131a6f66587971ef085ef97dfd07` trace, what they looked like, what {es} endpoints were hit, and so on.
