--- a/docs/management/connectors/action-types/servicenow-sir.asciidoc
+++ b/docs/management/connectors/action-types/servicenow-sir.asciidoc
@@ -10,7 +10,7 @@ The {sn} SecOps connector uses the https://docs.servicenow.com/bundle/orlando-ap
 [float]
 [[servicenow-sir-connector-prerequisites]]
 ==== Prerequisites
-After upgrading from {stack} version \<=7.15.0 to version >=7.16.0, you must complete the following within your {sn} instance before creating a new {sn} SecOps connector or <<servicenow-sir-connector-update, updating an existing one>>:
+After upgrading from {stack} version 7.15.0 or earlier to version 7.16.0 or later, you must complete the following within your {sn} instance before creating a new {sn} SecOps connector or <<servicenow-sir-connector-update, updating an existing one>>:
 
 * Install https://store.servicenow.com/sn_appstore_store.do#!/store/application/2f0746801baeb01019ae54e4604bcb0f[Elastic for Security Operations (SecOps)] from the {sn} Store.
 * Create a {sn} integration user and assign it the appropriate roles.
@@ -106,7 +106,7 @@ Config defines information for the connector type.
 `apiUrl`:: An address that corresponds to *URL*.
 `usesTableApi`:: A boolean that indicates if the connector uses the Table API or the Import Set API.
 
-NOTE: If `usesTableApi` is set to false the Elastic application should be installed in {sn}.
+NOTE: If `usesTableApi` is set to false, the Elastic application should be installed in {sn}.
 
 Secrets defines sensitive information for the connector type.
 
@@ -139,7 +139,7 @@ Category::             The category of the incident.
 Subcategory::          The subcategory of the incident.
 Correlation ID::       Connectors using the same Correlation ID will be associated with the same {sn} incident. This value determines whether a new {sn} incident will be created or an existing one is updated. Modifying this value is optional; if not modified, the rule ID and alert ID are combined as `{{ruleID}}:{{alert ID}}` to form the Correlation ID value in {sn}. The maximum character length for this value is 100 characters.
 
-NOTE: Using the default configuration of `{{ruleID}}:{{alert ID}}` ensures that {sn} will create a separate incident record for every generated alert that uses a unique alert ID. In other words, if the rule generates multiple alerts that use the same alert IDs, {sn} creates and continually updates a single incident record for the alert.
+NOTE: Using the default configuration of `{{ruleID}}:{{alert ID}}` ensures that {sn} will create a separate incident record for every generated alert that uses a unique alert ID. If the rule generates multiple alerts that use the same alert IDs, {sn} creates and continually updates a single incident record for the alert.
 
 Correlation Display::  A descriptive label of the alert for correlation purposes in {sn}.
 Description::          The details about the incident.
