--- a/docs/setup/docker.asciidoc
+++ b/docs/setup/docker.asciidoc
@@ -14,7 +14,7 @@ https://github.com/elastic/dockerfiles/tree/{branch}/kibana[GitHub].
 These images contain both free and subscription features.
 <<managing-licenses,Start a 30-day trial>> to try out all of the features.
 
-[float]
+[discrete]
 [[run-kibana-on-docker-for-dev]]
 === Run {kib} on Docker for development
 
@@ -49,22 +49,6 @@ and enrollment token.
 . Copy the generated password and enrollment token and save them in a secure 
 location. These values are shown only when you start {es} for the first time.
 You'll use these to enroll {kib} with your {es} cluster and log in.
-+
-[NOTE]
-====
-If you need to reset the password for the `elastic` user or other
-built-in users, run the {ref}/reset-password.html[`elasticsearch-reset-password`]
-tool. To generate new enrollment tokens for {kib} or {es} nodes, run the
-{ref}/create-enrollment-token.html[`elasticsearch-create-enrollment-token`] tool.
-These tools are available in the {es} `bin` directory of the Docker container.
-
-For example:
-
-[source,sh]
-----
-docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-reset-password -u elastic
-----
-====
 
 . In a new terminal session, start {kib} and connect it to your {es} container:
 +
@@ -84,7 +68,32 @@ When you start {kib}, a unique link is output to your terminal.
   .. Log in to {kib} as the `elastic` user with the password that was generated
   when you started {es}.
 
-[float]
+[[docker-generate]]
+[discrete]
+=== Generate passwords and enrollment tokens
+If you need to reset the password for the `elastic` user or other
+built-in users, run the {ref}/reset-password.html[`elasticsearch-reset-password`]
+tool. This tool is available in the {es} `bin` directory of the Docker container.
+
+For example, to reset the password for the `elastic` user:
+
+[source,sh]
+----
+docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-reset-password -u elastic
+----
+
+If you need to generate new enrollment tokens for {kib} or {es} nodes, run the
+{ref}/create-enrollment-token.html[`elasticsearch-create-enrollment-token`] tool.
+This tool is available in the {es} `bin` directory of the Docker container.
+
+For example, to generate a new enrollment token for {kib}:
+
+[source,sh]
+----
+docker exec -it es-node01 /usr/share/elasticsearch/bin/elasticsearch-create-enrollment-token -s kibana
+----
+
+[discrete]
 === Remove Docker containers
 
 To remove the containers and their network, run:
@@ -96,7 +105,7 @@ docker rm es-node01
 docker rm kib-01
 ----
 
-[float]
+[discrete]
 [[configuring-kibana-docker]]
 === Configure Kibana on Docker
 
@@ -105,7 +114,7 @@ conventional approach is to provide a `kibana.yml` file as described in
 {kibana-ref}/settings.html[Configuring Kibana], but it's also possible to use
 environment variables to define settings.
 
-[float]
+[discrete]
 [[bind-mount-config]]
 ==== Bind-mounted configuration
 
@@ -132,7 +141,7 @@ docker run -it --rm -v full_path_to/config:/usr/share/kibana/config -v full_path
 docker run -it --rm -v full_path_to/config:/usr/share/kibana/config -v full_path_to/data:/usr/share/kibana/data {docker-image} bin/kibana-keystore add test_keystore_setting
 ----
 
-[float]
+[discrete]
 [[environment-variable-config]]
 ==== Environment variable configuration
 
@@ -176,7 +185,7 @@ services:
 Since environment variables are translated to CLI arguments, they take
 precedence over settings configured in `kibana.yml`.
 
-[float]
+[discrete]
 [[docker-defaults]]
 ==== Docker defaults
 The following settings have different default values when using the Docker
