--- a/docs/setup/docker.asciidoc
+++ b/docs/setup/docker.asciidoc
@@ -18,20 +18,27 @@ These images contain both free and subscription features.
 [[run-kibana-on-docker-for-dev]]
 === Run {kib} on Docker for development
 
+. Start an {es} container for development or testing:
++
+--
 ifeval::["{release-state}"=="unreleased"]
 
 NOTE: No Docker images are currently available for {kib} {version}.
 
 endif::[]
 
-. Start an {es} container for development or testing:
-+
+ifeval::["{release-state}"!="unreleased"]
+
 [source,sh,subs="attributes"]
 ----
 docker network create elastic
 docker pull {es-docker-image}
 docker run --name es-node01 --net elastic -p 9200:9200 -p 9300:9300 -t {es-docker-image}
 ----
+
+endif::[]
+
+--
 +
 When you start {es} for the first time, the following security configuration 
 occurs automatically:
@@ -52,11 +59,23 @@ You'll use these to enroll {kib} with your {es} cluster and log in.
 
 . In a new terminal session, start {kib} and connect it to your {es} container:
 +
+--
+ifeval::["{release-state}"=="unreleased"]
+
+NOTE: No Docker images are currently available for {kib} {version}.
+
+endif::[]
+
+ifeval::["{release-state}"!="unreleased"]
+
 [source,sh,subs="attributes"]
 ----
 docker pull {docker-image}
 docker run --name kib-01 --net elastic -p 5601:5601 {docker-image}
 ----
+
+endif::[]
+--
 +
 When you start {kib}, a unique link is output to your terminal.
 
