--- a/docs/management/manage-data-views.asciidoc
+++ b/docs/management/manage-data-views.asciidoc
@@ -1,5 +1,5 @@
 [[managing-data-views]]
-== Manage data views
+== Structure the data
 :keywords: administrator, data view, data views, management, runtime fields, runtime fields in Kibana, scripted fields, field formatters, data fields, index pattern, index patterns
 :description: Conceptual and step-by-step procedures for using runtime fields, scripted fields, and field formatters.
 
