--- a/docs/setup/connect-to-elasticsearch.asciidoc
+++ b/docs/setup/connect-to-elasticsearch.asciidoc
@@ -20,6 +20,23 @@ To show a
 Beats integration, use the filter below the side navigation.
 
 [float]
+=== Accessing data with data views
+
+{kib} requires a data view to tell it which {es} data you want to access,
+and whether the data is time-based. A data view can point to one or more {es}
+data streams, indices, or index aliases by name.
+
+Data views are typically created by an administrator when sending data to {es}.
+You can <<data-views,create or update data views>> in *Stack Management*, or by using a script
+that accesses the {kib} API.
+
+{kib} uses the data view to show you a list of fields, such as
+`event.duration`. You can customize the display name and format for each field.
+For example, you can tell {kib} to display `event.duration` in seconds.
+{kib} has <<managing-fields,field formatters>> for strings,
+dates, geopoints, and numbers.
+
+[float]
 === Add data with Elastic solutions
 
 A good place to start is with one of our Elastic solutions, which
@@ -102,3 +119,7 @@ To take your investigation
 to a deeper level, use <<discover, **Discover**>> and quickly gain insight to your data:
 search and filter your data, get information about the structure of the fields,
 and analyze your findings in a visualization.
+
+--
+
+include::data-views.asciidoc[]
