--- a/docs/settings/url-drilldown-settings.asciidoc
+++ b/docs/settings/url-drilldown-settings.asciidoc
@@ -11,7 +11,7 @@ Configures the external URL policies. URL drilldowns respect the global *Externa
 By default all external URLs are allowed.
 
 For example, to allow only external URLs to the `example.com` domain with the `https` scheme, except for the `danger.example.com` sub-domain,
-which is denied even when `https` scheme is used.
+which is denied even when `https` scheme is used:
 
 ["source","yml"]
 -----------
