--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -315,13 +315,13 @@ Discover::
 Elastic Security::
 For the Elastic Security 7.16.0 release information, refer to {security-guide}/release-notes.html[_Elastic Security Solution Release Notes_].
 Fleet::
-* Adds agent modal {kibana-pull}114830[#114830]
+* Adds prompt for users to add an agent if they add an integration to an agent policy with no agents {kibana-pull}114830[#114830]
 * Allow users with read access to view Integrations app {kibana-pull}113925[#113925]
 * Removes enterprise license requirement for custom registry URL {kibana-pull}113858[#113858]
 * Adds "Keep Policies up to Date" functionality for integrations {kibana-pull}112702[#112702]
 * Allow packages to specify index privileges {kibana-pull}112397[#112397]
 * Allow Integrations browse page to filter on descriptions {kibana-pull}111649[#111649]
-* Support automatic upgrades of package policies when updating integrations {kibana-pull}108269[#108269]
+* Support automatic upgrades of Package Policies when updating Integrations {kibana-pull}108269[#108269]
 Kibana Home & Add Data::
 * Adds “Add data” button to Global Nav Drawer {kibana-pull}113648[#113648]
 Lens & Visualizations::
@@ -348,8 +348,6 @@ Management::
 * Adds tooltip help text for Transform filter query control {kibana-pull}108720[#108720]
 Maps::
 * Adds support for UTM and MGRS coordinates in Maps "Go To" button {kibana-pull}107835[#107835]
-Monitoring::
-* Remove angular dep from legacy shims {kibana-pull}109132[#109132]
 Observability::
 * APM-Fleet integration version check & upgrade message {kibana-pull}115297[#115297]
 * Enhancements errors list page {kibana-pull}115194[#115194]
@@ -376,7 +374,7 @@ Observability::
 * Browser monitors - Zip Url - add TLS Options and Proxy Url {kibana-pull}112554[#112554]
 * Adds "Add to case" button {kibana-pull}112463[#112463]
 * Adds new advanced options {kibana-pull}112454[#112454]
-* Make all error messages on tables consistent {kibana-pull}111690[#111690]
+* Make all error messages on tables consistence {kibana-pull}111690[#111690]
 * Redirect to error page when Heartbeat mappings are missing {kibana-pull}110857[#110857]
 * New "No Data" screens {kibana-pull}107709[#107709]
 * For filters, use shared component {kibana-pull}105739[#105739]
