--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -352,7 +352,7 @@ Observability::
 * Adds APM-Fleet integration version check and upgrade message {kibana-pull}115297[#115297]
 * Enhancements errors list page {kibana-pull}115194[#115194]
 * Revert multi-metric ML job {kibana-pull}114961[#114961]
-* Alert creation and freeform selection {kibana-pull}111883[#111883]
+* Adds the ability to select any service name, transaction type, and environment when creating and editing rules, both in APM and Stack Management. {kibana-pull}111883[#111883]
 * Show new "no data screen" on the getting started page {kibana-pull}111803[#111803]
 * Consistent "no data" screen with other Observability solutions {kibana-pull}111630[#111630]
 * Set start date of APM ML job to -4 weeks {kibana-pull}111375[#111375]
